--- a/stb/core/templates/project.html
+++ b/stb/core/templates/project.html
@@ -41,7 +41,9 @@
             <div class="app-sidebar__inner">
                 <ul class="vertical-nav-menu">
                     <li class="app-sidebar__heading">Project Needs</li>
-
+                    {% for position_id, position_info_list in positions.items %}
+                        {{ position_info_list.0 }}<br>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
@@ -122,7 +124,7 @@
                 <div class="col-md-12">
                     <div class="main-card mb-3 card">
                         <div class="card-body">
-                            <h5 class="card-title">{{ position_info_list.0.title }}</h5>
+                            <h5 class="card-title">{{ position_info_list.0 }}</h5>
                             <p>{{ position_info_list.0.description|markdown }}</p>
                             <p>{{ position_info_list.0.availability|markdown }}</p>
                             {{ position_info_list.1 }}
