--- a/stb/core/templates/registration/login.html
+++ b/stb/core/templates/registration/login.html
@@ -70,11 +70,11 @@
                 <div class="col-md-12">
                     <div class="main-card mb-3 card">
                         <div class="card-body">
-                            <h5 class="card-title">Bootstrap 4 Form Validation</h5>
+                            <h5 class="card-title">Login</h5>
                             <form method="post">
                               {% csrf_token %}
                               {{ form }}
-                              <button class="btn btn-primary" type="submit">Submit form</button>
+                              <button class="btn btn-primary" type="submit">Login</button>
 
                             </form>
                         </div>
