--- a/stb/core/templates/registration/signup.html
+++ b/stb/core/templates/registration/signup.html
@@ -69,12 +69,11 @@
                 <div class="col-md-12">
                     <div class="main-card mb-3 card">
                         <div class="card-body">
-                            <h5 class="card-title">Bootstrap 4 Form Validation</h5>
+                            <h5 class="card-title">Signup</h5>
                             <form method="post">
                               {% csrf_token %}
-                              {{ form }}
-                              <button class="btn btn-primary" type="submit">Submit form</button>
-
+                              {{ form }}<br>
+                              <button class="btn btn-primary" type="submit" style="margin-top: 20px;">Signup</button>
                             </form>
                         </div>
                     </div>
