--- a/stb/core/templates/project.html
+++ b/stb/core/templates/project.html
@@ -87,7 +87,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Project Needs</h5>
                             {% for position_id, position_info_list in positions.items %}
-                                {{ position_info_list.0.title }}
+                                {{ position_info_list.0.title }}<br>
                             {% endfor %}
                         </div>
                     </div>
