--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -154,13 +154,13 @@
                     <div class="app-footer-left">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="nav-link">
-                                    Footer Link 1
+                                <a href="http://stbuilder.pythonforce.com/" class="nav-link" target="_blank">
+                                    Live Demo
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="nav-link">
-                                    Footer Link 2
+                                <a href="https://github.com/python-force/social-team-builder" class="nav-link" target="_blank">
+                                    Project Source Code / Docs
                                 </a>
                             </li>
                         </ul>
@@ -168,16 +168,16 @@
                     <div class="app-footer-right">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="nav-link">
-                                    Footer Link 3
+                                <a href="https://github.com/DashboardPack/architectui-html-theme-free" class="nav-link" target="_blank">
+                                    Architect UI Template
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="nav-link">
+                                <a href="https://www.djangoproject.com/" class="nav-link">
                                     <div class="badge badge-success mr-1 ml-0">
                                         <small>NEW</small>
                                     </div>
-                                    Footer Link 4
+                                    Powered by Django
                                 </a>
                             </li>
                         </ul>
