--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -124,7 +124,7 @@
                                             {% if user.is_authenticated %}
                                             <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                                 <button onclick="window.location.href = '{% url "profile" user.users.id %}';" type="button" tabindex="0" class="dropdown-item">Profile</button>
-
+                                                <button onclick="window.location.href = '{% url "auth_logout" %}';" type="button" tabindex="0" class="dropdown-item">Logout</button>
                                             </div>
                                             {% endif %}
                                         </div>
@@ -144,7 +144,8 @@
                                         </button>
                                     </div>
                                     {% else %}
-
+                                        <a href="{% url 'auth_login' %}" style="padding-right: 10px;">Login</a>
+                                        <a href="{% url 'registration_register' %}">Register</a>
                                     {% endif %}
                                 </div>
                             </div>
