--- a/stb/core/templates/index.html
+++ b/stb/core/templates/index.html
@@ -67,7 +67,8 @@
                             </i>
                         </div>
                         <div>Projects
-                            <div class="page-title-subheading">Projects available to apply to.
+                            <div class="page-title-subheading">
+                                Projects available to apply to.
                             </div>
                         </div>
                     </div>
